[package]
name = "more-config"
version = "3.0.0"
edition = "2018"
rust-version = "1.60"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support for configuration"
keywords = ["more", "configuration", "config"]
license = "MIT"
readme = "README.md"
homepage = "https://commonsensesoftware.github.io/more-rs-config/"
repository = "https://github.com/commonsensesoftware/more-rs-config"

# RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc
[package.metadata.docs.rs]
features = [
    "binder",
    "chained",
    "cmd",
    "env",
    "ini",
    "json",
    "mem",
    "xml",
    "yaml",
]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "config"
path = "src/lib.rs"
doctest = false

[features]
default = ["cmd", "env", "mem"]
async = ["dep:maybe-impl"]
binder = ["dep:serde"]
chained = []
cmd = []
env = []
ini = ["dep:configparser", "more-changetoken/fs"]
json = ["dep:serde_json", "more-changetoken/fs"]
mem = []
xml = ["dep:xml_rs", "more-changetoken/fs"]
yaml = ["dep:yaml-rust2", "more-changetoken/fs"]
all = ["binder", "chained", "cmd", "env", "ini", "json", "mem", "xml", "yaml"]

[workspace.dependencies]
serde = "1.0"
yaml-rust2 = "0.9"

[dependencies]
cfg-if = "1.0"
configparser = { version = "3.1.0", optional = true }
maybe-impl = { version = "0.1.0", optional = true }
more-changetoken = "2.1.0"
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0.18"
xml_rs = { version = "1.0.0", package = "xml", optional = true }
yaml-rust2 = { workspace = true, optional = true }

[dev-dependencies]
more-config = { path = ".", features = ["all"] }
serde = { workspace = true, features = ["derive"] }
tempfile = "3.27.0"
test-case = "3.3.1"
yaml-rust2.workspace = true

[[example]]
name = "demo"
path = "examples/demo.rs"