[workspace]
members = [".", "derive"]

[workspace.package]
version = "3.0.0"
edition = "2021"
rust-version = "1.79"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
license = "MIT"
repository = "https://github.com/commonsensesoftware/more-rs-config"

[workspace.dependencies]
proc-macro2 = "1"
proptest = "1"
quote = "1"
serde = "1.0"
serde_derive_internals = "0.29"
serde_json = "1.0"
syn = { version = "2", features = ["full", "parsing", "printing"] }
trybuild = "1"
yaml-rust2 = "0.9"

[package]
name = "more-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides support for configuration"
keywords = ["more", "configuration", "config"]
readme = "README.md"
homepage = "https://commonsensesoftware.github.io/more-rs-config/"

# RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc --features all
[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "config"
path = "src/lib.rs"

[features]
default = ["cmd", "env", "mem"]
binder = ["dep:serde"]
chained = []
cmd = []
derive = ["dep:more-config-derive", "binder"]
env = []
ini = ["dep:configparser", "more-changetoken/fs"]
json = ["dep:serde_json", "more-changetoken/fs"]
mem = []
typed = ["dep:serde"]
xml = ["dep:xml_rs", "more-changetoken/fs"]
yaml = ["dep:yaml-rust2", "more-changetoken/fs"]
all = ["chained", "cmd", "derive", "env", "ini", "json", "mem", "typed", "xml", "yaml"]

[dependencies]
more-config-derive = { path = "derive", optional = true }
arc-swap = "1.9.1"
configparser = { version = "3.1.0", optional = true }
indexmap = "2.14.0"
more-changetoken = "2.1.0"
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = "2.0.18"
tracing = "0.1.40"
xml_rs = { version = "1.0.0", package = "xml", optional = true }
yaml-rust2 = { workspace = true, optional = true }

[dev-dependencies]
more-config = { path = ".", features = ["all"] }
proptest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = "3.27.0"
test-case = "3.3.1"
yaml-rust2.workspace = true

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "partial-bind"
path = "examples/partial_bind.rs"
