[package]
name = "more-config-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macro for more-config Deserialize"
keywords = ["more", "configuration", "config", "derive"]

[lib]
name = "config_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_derive_internals = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
trybuild = { workspace = true }
