[package]
name = "more-config"
version = "2.0.0"
edition = "2018"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support for configuration"
keywords = ["more", "configuration", "config"]
license = "MIT"
readme = "README.md"
homepage = "https://commonsensesoftware.github.io/more-rs-config/"
repository = "https://github.com/commonsensesoftware/more-rs-config"
include = ["*.rs", "!build.rs", "README.md"]

# RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc
[package.metadata.docs.rs]
features = ["std", "chained", "mem", "env", "cmd", "ini", "json", "xml", "binder"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "config"
path = "lib.rs"
doctest = false

[features]
default = ["std"]
async = []
util = []
std = ["util"]
chained = ["util"]
mem = ["util"]
env = ["util"]
cmd = ["util"]
ini = ["util", "configparser", "more-changetoken/fs"]
binder = ["serde"]
json = ["util", "serde_json", "more-changetoken/fs"]
xml = ["util", "xml_rs", "more-changetoken/fs"]

[dependencies]
more-changetoken = "2.0"
configparser = { version = "3.0", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
xml_rs = { version = "0.8", package = "xml", optional = true }
cfg-if = "1.0"

[dev-dependencies]
test-case = "2.2"

[dev-dependencies.more-config]
path = "."
features = ["cmd"]