[package]
name = "more-config-tests"
version = "1.0.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"
doctest = false

[dependencies]
more-changetoken = "2.0"
more-config = { path = "../src", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-case = "2.2"