[package]
name = "more-config-tests"
version = "1.0.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"
doctest = false

[features]
async = ["more-config/async"]

[dependencies]
cfg-if.workspace = true
more-changetoken.workspace = true
more-config = { path = "../src", features = ["all"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
test-case.workspace = true